[gd_scene load_steps=3 format=2]

[ext_resource path="res://materiais/imagem/tela_grajau.jpeg" type="Texture" id=1]
[ext_resource path="res://script/tela_grajau.gd" type="Script" id=2]

[node name="tela_grajau" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 198, 350 )
scale = Vector2( 0.580556, 0.55625 )
texture = ExtResource( 1 )

[node name="button_igreja" type="TextureButton" parent="."]
margin_left = 93.0
margin_top = 134.0
margin_right = 231.0
margin_bottom = 338.0

[node name="camera" type="Camera2D" parent="button_igreja"]
position = Vector2( 61, 93 )
offset = Vector2( 4, 0 )
zoom = Vector2( 0.5, 0.5 )

[node name="tween" type="Tween" parent="button_igreja/camera"]

[node name="Timer" type="Timer" parent="button_igreja"]

[node name="button_casa_rosa" type="TextureButton" parent="."]
margin_left = 220.0
margin_top = 266.0
margin_right = 389.0
margin_bottom = 370.0

[node name="camera" type="Camera2D" parent="button_casa_rosa"]
position = Vector2( 60, 98 )
offset = Vector2( 4, 0 )
zoom = Vector2( 0.5, 0.5 )

[node name="tween" type="Tween" parent="button_casa_rosa/camera"]

[node name="Timer" type="Timer" parent="button_casa_rosa"]

[node name="button_casa_branca" type="TextureButton" parent="."]
margin_left = 12.0
margin_top = 384.0
margin_right = 188.0
margin_bottom = 528.0

[node name="camera" type="Camera2D" parent="button_casa_branca"]
position = Vector2( 87, 96 )
offset = Vector2( 4, 0 )
zoom = Vector2( 0.5, 0.5 )

[node name="tween" type="Tween" parent="button_casa_branca/camera"]

[node name="Timer" type="Timer" parent="button_casa_branca"]

[node name="Button" type="Button" parent="."]
margin_left = 27.0
margin_top = 653.0
margin_right = 153.0
margin_bottom = 689.0

[node name="Label" type="Label" parent="Button"]
margin_left = -3.0
margin_top = -5.0
margin_right = 120.0
margin_bottom = 33.0
text = "CHUTE"
align = 1
valign = 1

[node name="cazumbar" type="TextureButton" parent="Button"]
margin_left = 25.0
margin_top = -632.0
margin_right = 173.0
margin_bottom = -582.0

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 224.0
margin_top = 22.0
margin_right = 391.0
margin_bottom = 72.0

[connection signal="pressed" from="button_igreja" to="." method="_on_button_igreja_pressed"]
[connection signal="timeout" from="button_igreja/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="button_casa_rosa" to="." method="_on_button_casa_rosa_pressed"]
[connection signal="timeout" from="button_casa_rosa/Timer" to="." method="timeout_casa_rosa"]
[connection signal="pressed" from="button_casa_branca" to="." method="_on_button_casa_branca_pressed"]
[connection signal="timeout" from="button_casa_branca/Timer" to="." method="timeout_casa_branca"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button/cazumbar" to="." method="_on_cazumbar_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
